# courseworkDB

./: .gitignore  README.md  main.py  pyproject.toml
data/: file_workers.json
src/: API.py  Config.py  DBController.py  DBmanager.py  Utils.py  example.ini  interfaces.py
